# senita_chem

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  tests.yml
docs/: index.md  reference.md
docs/stylesheets/: extra.css
examples/: example_notebook.ipynb
reference/: index.html
search/: search_index.json
senita_chem/: __init__.py  cli.py  enricher.py  iupac_naming.py  local_pubchem_batch.py  pubchem_batch.py  rdkit_properties.py  synonym_cleaning.py
senita_chem/data/: enrichment_dict.json
tests/unit/: test_cli.py  test_enricher.py  test_local_pubchem_batch.py  test_pubchem_batch.py  test_rdkit_properties.py  test_synonym_cleaning.py
